<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!--Soundboard Menu-->
    <string name="no_soundboards">You do not have any soundboards.\n\nPlease press menu button.</string>
    <string name="menu_add_board">Add</string>
    <string name="menu_rename_board">Rename</string>
    <string name="menu_delete_board">Delete</string>
    <string name="menu_help">Help Center</string>
    <string name="menu_move_board">Move</string>
    <string name="menu_about">About</string>
    <string name="menu_internet">Internet</string>
    <string name="menu_dropbox">Dropbox</string>
    <string name="menu_duplicate_board">Duplicate</string>
    <string name="menu_global_settings">Settings</string>
    <string name="menu_email">Email me</string>
    <string name="menu_help_text">
        &lt;html>
			&lt;body bgcolor = \"#1C1C1C\" TEXT = \"#ffffff\" LINK = \"ffcc33\" VLINK = \"ff9933\">
				&lt;h2>Help Center&lt;/h2>
				This dialog is for necessary information that everyone should read.&lt;br />
				For tutorials and stuff you can visit &lt;a href=\"https://github.com/Mikuz/Boarder/wiki\">The Boarder wiki&lt;/a>.&lt;br />
				&lt;h3>Image for board&lt;/h3>
				Place \'icon.png\' to soundboard folder.&lt;br />
				Recommended size 48x48
				&lt;br />
				&lt;h3>Yellow/Green&lt;/h3>
				Green means that your sounds are inside board directory and messing with &lt;br />
				another directories won\'t break your board. &lt;br />
				You can also share your board directory when it\'s green. &lt;br />
				Use convert in board to make your board green.&lt;br />
				&lt;br />
				&lt;h3>Dropbox&lt;/h3>
				Use menu button on menu and select Dropbox.&lt;br />
				&lt;br />
				Upload local board to Dropbox or download board in Dropbox to local device.&lt;br />
				All boards will be located in /Boarder in Dropbox.&lt;br />
				Press back during transfer to cancel - corrupts file being transferred.&lt;br />
				You don\'t need to transfer files that are already transferred.&lt;br />
				&lt;br />
				&lt;h3>Sharing a board&lt;/h3>
				When sharing a board make sure it\'s green. Please read Yellow/Green.&lt;br />
			&lt;/body>
		&lt;/html>
    </string>
    
    <!--Soundboard Editor-->
    <string name="no_sounds">You do not have any sounds.\n\nPlease press menu button.</string>
    <string name="menu_add_sound">Add sound</string>
    <string name="menu_save_project">Save</string>
    <string name="menu_convert_project">Convert</string>
    <string name="menu_change_volume">Change volume</string>
    <string name="menu_board_settings">Settings</string>
    <string name="menu_rename_sound">Rename</string>
    <string name="menu_move_sound">Move</string>
    <string name="menu_remove_sound">Remove</string>
    
    <string name="menu_set_as">Set as...</string>
    <string name="menu_set_as_ringtone">Ringtone</string>
    <string name="menu_set_as_notification">Notification</string>
    <string name="menu_set_as_alarm">Alarm</string>
    
    <!--Graphical Soundboard Editor-->
    <string name="menu_listen_mode">Listen board</string>
    <string name="menu_edit_mode">Edit board</string>
    <string name="menu_notification">Notification</string>
    
    <!--File Explorer-->
    <string name="select_item">Select item</string>
    
    <!--Color Changer-->
    <string name="menu_pick_color">Pick color</string>
    <string name="menu_copy_color">Copy color</string>
    <string name="menu_save_color">Save</string>
    <string name="menu_cancel_color">Cancel</string>
    
    <!--Dropbox -->
    <string name="list_empty_instructions">No boards here</string>
    
    <!--Internet Uploads-->
    <string name="menu_upload_board">Upload</string>
    
    <!--Internet Downloads-->
    <string name="download_search_hint">Username or board name</string>
    
    <!--General-->
    <string name="app_name">Boarder</string>
    <string name="menu_play_pause">Play / Pause</string>
    
</resources>
