<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/sound_control">
        <item android:id="@+id/menu_play_pause"
              android:title="@string/menu_play_pause" />
        <item android:id="@+id/menu_board_settings"
              android:title="@string/menu_board_settings" />
    </group>

	<group android:id="@+id/project_actions">
	    <item android:id="@+id/menu_add_sound"
	          android:title="@string/menu_add_sound" />
	    <item android:id="@+id/menu_save_project"
	          android:title="@string/menu_save_project" />
	    <item android:id="@+id/menu_notification" 
			  android:title="@string/menu_notification" />
	    <item android:id="@+id/menu_convert_project"
	          android:title="@string/menu_convert_project" />
    </group>
    
</menu>